--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<section class="holder">
+			 <section class="box">3</section>
+			 <section class="box box-2">1</section>
+			 <section class="box box-3">2</section>
+		 </section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
